<resources>
    <string name="app_name">Anti Corruption</string>
    <string name="app_name_abbr">АКП КР</string>
    <string name="app_name_abbr_lang">ACP KR</string>
    <string name="project_title">ANTI-CORRUPTION PORTAL OF THE KYRGYZ REPUBLIC</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>

    <string name="main">Main</string>
    <string name="home">Main page</string>
    <string name="action_empty">Empty</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>
    <string name="clear">Clear</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="required">Required field</string>
    <string name="sending">Sending</string>
    <string name="app_error">Application error</string>
    <string name="close">Close</string>
    <string name="show">show</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_repeat">Repear password</string>
    <string name="myAccount">User</string>
    <string name="connectionError">Connection error</string>
    <string name="no_result">No result</string>
    <string name="search">Search</string>
    <string name="searchNoResult">Your query returned empty result</string>
    <string name="attention">Attention!</string>
    <string name="info">Info</string>
    <string name="title_activity_login">Login</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="logout">Sign out</string>
    <string name="error">Error</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_password_match">Passwords does not match</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Required field</string>
    <string name="permission_rationale">Permission is required for contacts to auto-complete email field.</string>
    <string name="login_fail">Login failed</string>
    <string name="user_not_found">User not found</string>
    <string name="password_error">Incorrect password</string>
    <string name="email_taken">This email is taken</string>
    <string name="error_invalid_phone">Invalid phone format</string>
    <string name="credentialsExpired">Your session has expired, sign in again.</string>
    <string name="notAuthorizedOrcredentialsExpired">You are not authorized or session has expired, sign in again.</string>
    <string name="authorization">Authorization</string>

    <!-- Strings related to login -->
    <string name="enter_email_to_complete">Enter your Email to proceed</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username_or_email">Username or Email</string>
    <string name="prompt_password">Password</string>

    <string name="select_sector">Select corruption sector</string>
    <string name="title">Title</string>
    <string name="report_description">Describe in detail</string>
    <string name="select_authority">Select state authority or agency</string>
    <string name="select_city">Select your city or district</string>
    <string name="select_type">Select application type</string>
    <string name="wannabe_anonym">I want to submit an anonymous application</string>
    <string name="contact">Contact information</string>
    <string name="title_activity_maps">Map</string>
    <string name="set_location">Point on the map</string>
    <string name="done">Done</string>
    <string name="done_send">Done</string>
    <string name="only_kg">You can point only within Kyrgyz Republic!</string>
    <string name="grant_location_permission">Please give your location permission</string>
    <string name="grant_location_permission_en">Please, give permission to locate your location</string>
    <string name="add_image">Add image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_limit">No more than 10 files are allowed!</string>
    <string name="submit">Submit</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="news">News</string>
    <string name="all_news">All news</string>
    <string name="map">Map</string>
    <string name="report">Application</string>
    <string name="reports">Applications</string>
    <string name="report_count">Applications:</string>
    <string name="error_happened">Something went wrong</string>
    <string name="reload">Reload</string>
    <string name="loading">Loading</string>
    <string name="comments">Comments</string>
    <string name="comment_count">Comments:</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add a comment</string>
    <string name="add">Add</string>
    <string name="no_comments">No comments</string>
    <string name="comment_moder">Your comment will be added after passing moderation, thank you.</string>
    <string name="rate_authority">Rate state authority</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_close">Cancel</string>
    <string name="city">City</string>
    <string name="authority">State authority</string>
    <string name="category">Corruption sector</string>
    <string name="type_header">Application type</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="anonymous">Anonymous</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="research_and_report">Investigations/Reports</string>
    <string name="corruption_fight">Corruption Struggle</string>
    <string name="corruption_map">Corruption Map</string>
    <string name="corruption_report">Report about a corruption</string>
    <string name="corruption_scheme_report">Report about a corruption scheme</string>
    <string name="wanna_know">I would like to know! Where…from?</string>
    <string name="all_applications">All Applications</string>
    <string name="corruption_rating">Corruption Rating</string>
    <string name="about">About the Project</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Tell a friend</string>
    <string name="anticorruption_edu">Anti-Corruption education</string>
    <string name="anticor_edu">Anti-Cor. education</string>
    <string name="anticor_politics">Anti-Cor. politics</string>
    <string name="analytics">Analytics</string>
    <string name="reload_new_data">Show latest</string>
    <string name="contacts">Contacts</string>
    <string name="date_time">Date and time</string>
    <string name="lang">Language</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_ky">Кыргызча</string>
    <string name="lang_en">English</string>
    <string name="social_login">Login with social account:</string>
    <string name="edit">edit</string>
    <string name="rating">Rating:</string>
    <string name="rating_count">Rating count:</string>
    <string name="rate">Rate authority</string>
    <string name="login_to_rate">You should be logged in to rate authority</string>
    <string name="rate1">Fully transparent and highly effective</string>
    <string name="rate2">Uncorrupted and effective</string>
    <string name="rate3">Uncorrupted</string>
    <string name="rate4">More likely to be uncorrupted</string>
    <string name="rate5">Slightly corrupted</string>
    <string name="rate6">Very corrupted</string>
    <string name="rate7">Corrupted</string>
    <string name="rate8">Strongly corrupted</string>
    <string name="rate9">Extremely corrupted</string>
    <string name="rate10">Fully corrupted</string>
    <string name="version">Version:</string>
    <string name="under_moderation">Your application is under moderation. Only you can see this now.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id" translatable="false">2026864364212005</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2026864364212005</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">AIw8j1pjMcH2QXUAPLaQQJ3SL</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">72HJCEZjjNU77TgrELQoskYpxhSuQslXciMolHrF9AW4lfnwbt</string>

</resources>
