<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kg.prosoft.anticorruption.SettingsActivity">
    <TextView
        android:id="@+id/id_tv_lang_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_rgroup_lng"
        android:paddingLeft="16dp"
        android:layout_below="@+id/id_tv_lang_title"
        android:checkedButton="@+id/id_radio_ky">
        <RadioButton
            android:text="@string/lang_ky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/id_radio_ky" />
        <RadioButton
            android:text="@string/lang_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/id_radio_ru" />
        <RadioButton
            android:text="@string/lang_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/id_radio_en" />
    </RadioGroup>


    <TextView
        android:id="@+id/id_tv_version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentBottom="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1.0.4"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/id_tv_version_number"
        />
</RelativeLayout>
