<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kg.prosoft.anticorruption.NewsFragment">
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/id_tv_notify"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:background="@drawable/blue_view_click"
            android:gravity="center"
            android:text="@string/reload_new_data"
            android:padding="10dp"
            android:layout_height="wrap_content" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_lv_news" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_ll_reload"
        android:background="@color/white"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_happened"
            android:id="@+id/id_tv_load_error"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_view_click"
            android:text="@string/reload"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:id="@+id/id_btn_reload"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</FrameLayout>
