<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kg.prosoft.anticorruption.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/username_or_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username_or_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:maxLines="1" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_view_click"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:text="@string/action_sign_in_short"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:id="@+id/id_tv_forgot"
                android:textColor="@drawable/link"
                android:padding="6dp"
                android:gravity="center"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/id_tv_register"
                android:textColor="@drawable/link"
                android:padding="6dp"
                android:gravity="center"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_login"
                android:gravity="center"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="5dp" />

        <LinearLayout
            android:id="@+id/id_ll_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_login_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />
            <Button
                android:id="@+id/id_btn_fb"
                android:background="@drawable/fb_button"
                android:layout_marginRight="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <Button
                android:id="@+id/id_btn_twi"
                android:background="@drawable/twi_button"
                android:layout_marginRight="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
            <Button
                android:id="@+id/ok_login_button"
                android:background="@drawable/ok_button"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twi_login_button"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

