<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/id_ll_logo"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/id_iv_logo"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_tv_logo"
            android:text="@string/project_title"
            />
    </LinearLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/id_rl_login"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_btn_login"
            android:text="@string/login"
            android:layout_alignParentLeft="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_btn_register"
            android:text="@string/register"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_rl_account"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/id_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <ImageView
            android:id="@+id/id_iv_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:tint="@android:color/white"
            android:src="@drawable/ic_account_circle_black_24dp" />
    </RelativeLayout>


</LinearLayout>