<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="kg.prosoft.anticorruption.NewsViewActivity"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/id_tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@drawable/link"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="6dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/id_tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_category"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/id_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:text="TextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_title"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/id_iv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/id_tv_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:lineSpacingMultiplier="1.2"
            android:textSize="15sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/id_iv_img"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <!--comments title-->
        <TextView
            android:id="@+id/id_tv_comments_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:paddingBottom="5dp"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:text="@string/comments"
            android:background="@color/lightGray"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/id_tv_comments_zero"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_comments"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_comments_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp" />

        <!--add comment link-->
        <TextView
            android:id="@+id/id_tv_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="13dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:text="@string/add"
            android:textColor="@drawable/link"
            android:onClick="addComment"
            app:layout_constraintTop_toTopOf="@+id/id_tv_comments_title"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="8dp" />

        <!--comments-->
        <LinearLayout
            android:id="@+id/id_ll_comments"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_comments_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp">
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
